// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing for <ProductCard/> component debe de incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    Increase
  </button>
</div>
`;

exports[`testing for <ProductCard/> component debe de mostrar el componente correctamente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;
